<resources>
    <string name="app_name">Learn Java</string>
    <string name="result">Result:</string>
    <string name="question">Question:</string>
    <string name="answer_options">Answer options:</string>
    <string name="checkbox1">CheckBox1</string>
    <string name="checkbox2">CheckBox2</string>
    <string name="checkbox3">CheckBox3</string>
    <string name="checkbox4">CheckBox4</string>
    <string name="checkbox5">CheckBox5</string>
    <string name="checkbox6">CheckBox6</string>
    <string name="checkbox7">CheckBox7</string>
    <string name="submit">Verify</string>
    <string name="arrow_back">Back arrow</string>
    <string name="topic_label">\Topic: </string>
    <string name="task_label">\Task: </string>
    <string name="right_answer">Correct answer</string>
    <string name="item_main">Home</string>
    <string name="item_topics">List of topics</string>
    <string name="item_statistics">Statistics</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_password">Enter your password</string>
    <string name="text_register_button">Register now</string>
    <string name="text_i_have_an_account">I already have an account</string>
    <string name="registration">Registration</string>
    <string name="label_button_training_mode">Learning Mode</string>
    <string name="label_button_test_mode">Test mode</string>
    <string name="label_button_statistics">Statistics</string>
    <string name="item_exit_account">Sign out</string>
    <string name="label_stat">Results of solving problems:</string>
    <string name="button_clear">Clear</string>
    <string name="label_button_go_main">Go to problem solving</string>
    <string name="sign_out">Sign Out</string>
    <string name="user_s_photo">user`s_photo</string>
    <string name="toast_solve_this_problem_first">Solve this problem first!</string>
    <string name="item_language">Language</string>
    <string name="select_application_language">Language:</string>
    <string name="radio_button_label_english">English</string>
    <string name="radio_button_label_russian">русский</string>
    <string name="radio_button_label_ukraine">українська</string>
    <string name="button_label_comment">Comment</string>

</resources>