<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewTaskActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:padding="8dp"
    tools:context=".TaskActivity">

    <LinearLayout
        android:id="@+id/layoutLinearTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBarTaskActivity"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutActivityTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineCenter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/textViewLabelTopic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/colorLabelText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/topic_label" />

            <TextView
                android:id="@+id/textViewLabelTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/colorLabelText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewLabelTopic"
                tools:text="@string/task_label" />

            <TextView
                android:id="@+id/textLabelResultTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/colorLabelText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewLabelTopic"
                tools:text="@string/result" />

            <TextView
                android:id="@+id/textViewLabelQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:padding="8dp"
                android:textAlignment="center"
                android:textColor="@color/colorLabelText"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textLabelResultTask"
                tools:text="@string/question" />

            <TextView
                android:id="@+id/textViewTextMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:padding="8dp"
                android:ems="10"
                android:enabled="false"
                tools:text="Text task"
                android:background="@drawable/style_textview"
                android:gravity="start|top"
                android:textColor="@color/colorTextTask"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewLabelQuestion" />

            <TextView
                android:id="@+id/textViewHintAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/style_textview"
                android:enabled="false"
                android:padding="8dp"
                android:ems="10"
                android:textColor="@color/colorTextTask"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/textViewTextMultiLine"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/textViewAnswerOptionLabel"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Hint" />

            <TextView
                android:id="@+id/textViewAnswerOptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textColor="@color/colorLabelText"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/checkBox1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewTextMultiLine"
                tools:text="@string/answer_options" />

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="28dp"
                android:background="@drawable/style_btn"
                android:onClick="onClickCheckBox"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:textColor="@color/colorLabelText"
                android:textSize="15sp"
                android:textStyle="bold"
                app:buttonTint="@color/colorLabelText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewAnswerOptionLabel"
                tools:text="@string/checkbox1" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="28dp"
                android:background="@drawable/style_btn"
                android:onClick="onClickCheckBox"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:textColor="@color/colorLabelText"
                android:textSize="15sp"
                android:textStyle="bold"
                app:buttonTint="@color/colorLabelText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkBox1"
                tools:text="@string/checkbox2" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="28dp"
                android:background="@drawable/style_btn"
                android:onClick="onClickCheckBox"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:textColor="@color/colorLabelText"
                android:textSize="15sp"
                android:textStyle="bold"
                app:buttonTint="@color/colorLabelText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkBox2"
                tools:text="@string/checkbox3" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="28dp"
                android:background="@drawable/style_btn"
                android:onClick="onClickCheckBox"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:textColor="@color/colorLabelText"
                android:textSize="15sp"
                android:textStyle="bold"
                app:buttonTint="@color/colorLabelText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkBox3"
                tools:text="@string/checkbox4" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="28dp"
                android:background="@drawable/style_btn"
                android:onClick="onClickCheckBox"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:textColor="@color/colorLabelText"
                android:textSize="15sp"
                android:textStyle="bold"
                app:buttonTint="@color/colorLabelText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkBox4"
                tools:text="@string/checkbox5" />

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="28dp"
                android:background="@drawable/style_btn"
                android:onClick="onClickCheckBox"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:textColor="@color/colorLabelText"
                android:textSize="15sp"
                android:textStyle="bold"
                app:buttonTint="@color/colorLabelText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkBox5"
                tools:text="@string/checkbox6" />

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="28dp"
                android:background="@drawable/style_btn"
                android:onClick="onClickCheckBox"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:textColor="@color/colorLabelText"
                android:textSize="15sp"
                android:textStyle="bold"
                app:buttonTint="@color/colorLabelText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkBox6"
                tools:text="@string/checkbox7" />

            <Button
                android:id="@+id/button_check_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/style_btn"
                android:onClick="checkRightAnswer"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/submit"
                app:layout_constraintEnd_toEndOf="@id/imageViewArrowForward"
                app:layout_constraintStart_toStartOf="@id/imageViewArrowBack"
                app:layout_constraintTop_toBottomOf="@id/checkBox7" />

            <ImageView
                android:id="@+id/imageViewArrowBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/arrow_back"
                android:onClick="goPreviousTask"
                app:layout_constraintEnd_toStartOf="@id/button_check_answer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/button_check_answer"
                app:srcCompat="@drawable/back48" />

            <ImageView
                android:id="@+id/imageViewArrowForward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/arrow_back"
                android:onClick="goNextTask"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/button_check_answer"
                app:layout_constraintTop_toTopOf="@id/button_check_answer"
                app:srcCompat="@drawable/arrow48" />

            <Button
                android:id="@+id/buttonShowRightAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/style_btn"
                android:onClick="showRightAnswer"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/right_answer"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_check_answer" />


            <Button
                android:id="@+id/buttonShowHintAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/style_btn"
                android:onClick="onClickShowHintAnswer"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/button_label_comment"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/imageViewArrowForward"
                app:layout_constraintStart_toStartOf="@id/imageViewArrowBack"
                app:layout_constraintTop_toBottomOf="@id/checkBox7" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>






