<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonTrainingMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickGoTrainingMode"
        android:text="@string/label_button_training_mode"
        android:layout_margin="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="@drawable/style_btn"
        app:layout_constraintBottom_toTopOf="@+id/buttonTestMode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonTestMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickGoTestMode"
        android:text="@string/label_button_test_mode"
        android:layout_margin="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="@drawable/style_btn"
        app:layout_constraintBottom_toTopOf="@+id/buttonStatistics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTrainingMode" />

    <Button
        android:id="@+id/buttonStatistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickGoStatistics"
        android:text="@string/label_button_statistics"
        android:layout_margin="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="@drawable/style_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonTestMode" />

</LinearLayout>